Fixed warning on deprecated Number-Object constructor use since JDK9, see issue #227